# CPP_Course

1 seminar/: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  build.sh  conanfile.txt
1 seminar/compressor/: CMakeLists.txt
1 seminar/compressor/src/: compressor.cpp
1 seminar/libcompressor/: CMakeLists.txt
1 seminar/libcompressor/include/libcompressor/: libcompressor.hpp
1 seminar/libcompressor/src/: libcompressor.cpp
1 seminar/libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
